# nutrition

./: .gitignore  README.md  pyproject.toml
config/: config.template.yaml
configs/: test.yaml
data/: diets.template.yaml  items.template.yaml  items.yaml  meals.template.yaml  meals.yaml
src/nutrition/: __version__.py  cli.py  console.py  loader.py  utils.py  vars.py
src/nutrition/config/: __init__.py  add_config.py  create.py  get_config.py  getset.py  remove_config.py  set_config.py
src/nutrition/diet/: __init__.py  add_diet.py  calculate.py  get_diet.py  load.py  remove_diet.py  update_diet.py
src/nutrition/item/: __init__.py  add_item.py  get_item.py  load.py  remove_item.py  update_item.py
src/nutrition/meal/: __init__.py  add_meal.py  calculate.py  get_meal.py  load.py  remove_meal.py  update_meal.py
