[project]
name = "nutrition"
version = "1.0.0"
description = "A Python package for nutritional analysis"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Aditya Singh", email = "adityasingh8532@gmail.com" }
]
maintainers = [
    { name = "Aditya Singh", email = "adityasingh8532@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "pyyaml"
]
keywords = [
    "nutrition",
    "health",
    "food",
    "analysis"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
nut = "nutrition.cli:main"
n9n = "nutrition.cli:main"
nctl = "nutrition.cli:main"
